force-app/main/default/objects/Account/fields/Account_ID__c.field-meta.xml
<CustomField>
    <fullName>Account_ID__c</fullName>
    <displayFormat>A-{0000}</displayFormat>
    <label>Account ID</label>
    <type>AutoNumber</type>
</CustomField>