force-app/main/default/objects/Account/fields/Active_Loan_Count__c.field-meta.xml
<CustomField>
    <fullName>Active_Loan_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Count of active or in arrears loans for this customer</description>
    <inlineHelpText>The number of live loans this customer currently has</inlineHelpText>
    <label>Active Loan Count</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>