force-app/main/default/objects/Account/fields/Business_ID__c.field-meta.xml
<CustomField>
    <fullName>Business_ID__c</fullName>
    <description>Unique identifier for a business</description>
    <label>Business ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>