force-app/main/default/objects/Account/fields/BVN__c.field-meta.xml
<CustomField>
    <fullName>BVN__c</fullName>
    <description>This is the bank verification number of the customer, it is a unique value so no two customers can have the same BVN.</description>
    <externalId>true</externalId>
    <label>BVN</label>
    <length>11</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>