force-app/main/default/objects/Account/fields/BVN_Last4__c.field-meta.xml
<CustomField>
    <fullName>BVN_Last4__c</fullName>
    <description>Last four digits of BVN</description>
    <formula>RIGHT(BVN__c, 4)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BVN Last4</label>
    <type>Text</type>
</CustomField>