force-app/main/default/objects/Account/fields/Customer_Risk_Badge__c.field-meta.xml
<CustomField>
    <fullName>Customer_Risk_Badge__c</fullName>
    <formula>IF( Has_Arrears__c,
    &quot;⚠ &quot; &amp; PAR_Flag__c &amp; &quot; — Escalate to Credit Officer&quot;,
    IF( TEXT(KYC_Status__c) == &quot;Active&quot;,
        &quot;✅ Good Standing&quot;,
        &quot;⏳ KYC &quot; &amp; TEXT(KYC_Status__c)
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Risk Badge</label>
    <type>Text</type>
</CustomField>