force-app/main/default/objects/Account/fields/Days_Waiting_for_KYC__c.field-meta.xml
<CustomField>
    <fullName>Days_Waiting_for_KYC__c</fullName>
    <formula>TODAY() - KYC_Submission_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This is the number of days since the KYC documents were submitted.</inlineHelpText>
    <label>Days Waiting for KYC</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>