force-app/main/default/objects/Account/fields/Employer__c.field-meta.xml
<CustomField>
    <fullName>Employer__c</fullName>
    <description>This is not entirely required but would help with the customer&apos;s loan application</description>
    <label>Employer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>