force-app/main/default/objects/Account/fields/External_MACRM_Business_ID__c.field-meta.xml
<CustomField>
    <fullName>External_MACRM_Business_ID__c</fullName>
    <label>External MicroAgent CRM Business ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>