force-app/main/default/objects/Account/fields/Has_Arrears__c.field-meta.xml
<CustomField>
    <fullName>Has_Arrears__c</fullName>
    <formula>Max_Days_Past_Due__c &gt; 0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Has Arrears</label>
    <type>Checkbox</type>
</CustomField>