force-app/main/default/objects/Account/fields/KYC_Status__c.field-meta.xml
<CustomField>
    <fullName>KYC_Status__c</fullName>
    <description>This is for the KYC Flow pertaining to if customer can apply for loan</description>
    <label>KYC Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending Review</fullName>
                <default>true</default>
                <label>Pending Review</label>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>More Info Required</fullName>
            </value>
            <value>
                <fullName>Expired</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>