force-app/main/default/objects/Account/fields/KYC_Status_Display__c.field-meta.xml
<CustomField>
    <fullName>KYC_Status_Display__c</fullName>
    <formula>CASE( TEXT(KYC_Status__c),
  &quot;Active&quot;,             &quot;✅ Active&quot;,
  &quot;Pending Review&quot;,     &quot;⏳ Pending Review&quot;,
  &quot;Rejected&quot;,           &quot;❌ Rejected&quot;,
  &quot;More Info Required&quot;, &quot;⚠ More Info Required&quot;,
  &quot;Expired&quot;,            &quot;🔴 Expired&quot;,
  &quot;— Unknown —&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>KYC Status Display</label>
    <type>Text</type>
</CustomField>