force-app/main/default/objects/Account/fields/KYC_Submission_Date__c.field-meta.xml
<CustomField>
    <fullName>KYC_Submission_Date__c</fullName>
    <label>KYC Submission Date</label>
    <type>Date</type>
</CustomField>