force-app/main/default/objects/Account/fields/Last_CRM_Sync__c.field-meta.xml
<CustomField>
    <fullName>Last_CRM_Sync__c</fullName>
    <label>Last CRM Sync</label>
    <type>DateTime</type>
</CustomField>