force-app/main/default/objects/Account/fields/Loan_Application_Status__c.field-meta.xml
<CustomField>
    <fullName>Loan_Application_Status__c</fullName>
    <label>Loan Application Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
            </value>
            <value>
                <fullName>Pending Appraisal</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Declined</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>