force-app/main/default/objects/Account/fields/Max_Days_Past_Due__c.field-meta.xml
<CustomField>
    <fullName>Max_Days_Past_Due__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Highest days past due across this customer&apos;s loans</description>
    <inlineHelpText>The most overdue loan this customer has, measured in days past the scheduled repayment date</inlineHelpText>
    <label>Max Days Past Due</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>