force-app/main/default/objects/Account/fields/Monthly_Income__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Income__c</fullName>
    <description>The customer&apos;s monthly income is required for the loan application</description>
    <label>Monthly Income</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>