force-app/main/default/objects/Account/fields/Next_of_Kin_Phone__c.field-meta.xml
<CustomField>
    <fullName>Next_of_Kin_Phone__c</fullName>
    <label>Next of Kin Phone</label>
    <type>Phone</type>
</CustomField>