force-app/main/default/objects/Account/fields/Next_of_Kin_Relationship__c.field-meta.xml
<CustomField>
    <fullName>Next_of_Kin_Relationship__c</fullName>
    <label>Next of Kin Relationship</label>
    <length>80</length>
    <type>Text</type>
</CustomField>