force-app/main/default/objects/Account/fields/NIN__c.field-meta.xml
<CustomField>
    <fullName>NIN__c</fullName>
    <description>This is the customer&apos;s national identification number</description>
    <label>NIN</label>
    <length>11</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>