force-app/main/default/objects/Account/fields/NIN_Last4__c.field-meta.xml
<CustomField>
    <fullName>NIN_Last4__c</fullName>
    <formula>RIGHT(NIN__c, 4)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NIN Last4</label>
    <type>Text</type>
</CustomField>