force-app/main/default/objects/Account/fields/PAR_Flag__c.field-meta.xml
<CustomField>
    <fullName>PAR_Flag__c</fullName>
    <formula>IF( ISBLANK(Max_Days_Past_Due__c), &quot;Current&quot;,
  IF( Max_Days_Past_Due__c &gt;= 90, &quot;PAR 90&quot;,
    IF( Max_Days_Past_Due__c &gt;= 60, &quot;PAR 60&quot;,
      IF( Max_Days_Past_Due__c &gt;= 30, &quot;PAR 30&quot;,
        IF( Max_Days_Past_Due__c &gt;= 1, &quot;PAR 1&quot;,
          &quot;Current&quot;
)))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PAR Flag</label>
    <type>Text</type>
</CustomField>