force-app/main/default/objects/Account/fields/Single_LogIn_ID__c.field-meta.xml
<CustomField>
    <fullName>Single_LogIn_ID__c</fullName>
    <label>SingleLogInId</label>
    <length>50</length>
    <type>Text</type>
</CustomField>