force-app/main/default/objects/Account/fields/Total_Outstanding_Balance__c.field-meta.xml
<CustomField>
    <fullName>Total_Outstanding_Balance__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Sum of outstanding balances across active and in-arrears loans</description>
    <inlineHelpText>Total amount this customer still owes across live loans</inlineHelpText>
    <label>Total Outstanding Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>