force-app/main/default/objects/Account/validationRules/Age_Restriction.validationRule-meta.xml
<ValidationRule>
    <fullName>Age_Restriction</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  NOT(ISBLANK( Birth_Date__c )),
   Birth_Date__c  &gt; ADDMONTHS(TODAY(), -18 * 12)
)</errorConditionFormula>
    <errorDisplayField>Birth_Date__c</errorDisplayField>
    <errorMessage>Customer must be at least 18 years old to borrow.</errorMessage>
</ValidationRule>