force-app/main/default/objects/Account/validationRules/BVN_Validation_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>BVN_Validation_Rule</fullName>
    <active>true</active>
    <description>This is to ensure that the character count is accurate</description>
    <errorConditionFormula>AND(
  NOT(ISBLANK(BVN__c)),
  NOT(REGEX(BVN__c, &quot;^[0-9]{11}$&quot;))
)</errorConditionFormula>
    <errorDisplayField>BVN__c</errorDisplayField>
    <errorMessage>BVN must be exactly 11 digits.</errorMessage>
</ValidationRule>