force-app/main/default/objects/Account/validationRules/NIN_Validation_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>NIN_Validation_Rule</fullName>
    <active>true</active>
    <description>This is to ensure the NIN character count is correct</description>
    <errorConditionFormula>AND(
  NOT(ISBLANK(NIN__c)),
  NOT(REGEX(NIN__c, &quot;^[0-9]{11}$&quot;))
)</errorConditionFormula>
    <errorDisplayField>NIN__c</errorDisplayField>
    <errorMessage>NIN must be exactly 11 digits.</errorMessage>
</ValidationRule>