force-app/main/default/objects/Account/listViews/Accounts_Active_KYC.listView-meta.xml
<ListView>
    <fullName>Accounts_Active_KYC</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>KYC_Status__c</columns>
    <columns>Employment_Type__c</columns>
    <columns>Monthly_Income__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>KYC_Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <filters>
        <field>ACCOUNT.CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Recently Verified Customers</label>
</ListView>