force-app/main/default/objects/Account/listViews/All_Active_Customers.listView-meta.xml
<ListView>
    <fullName>All_Active_Customers</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>PC_EMAIL</columns>
    <columns>PC_PHONE3</columns>
    <columns>KYC_Status__c</columns>
    <columns>Employment_Type__c</columns>
    <columns>Monthly_Income__c</columns>
    <filterScope>Mine</filterScope>
    <label>All Active Customers</label>
</ListView>