force-app/main/default/objects/Account/listViews/AllAccounts.listView-meta.xml
<ListView>
    <fullName>AllAccounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>PC_PHONE3</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>Monthly_Income__c</columns>
    <columns>KYC_Status__c</columns>
    <columns>LivingSpring_Branch__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Accounts</label>
</ListView>