force-app/main/default/objects/Account/listViews/Incomplete_KYC.listView-meta.xml
<ListView>
    <fullName>Incomplete_KYC</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>KYC_Status__c</columns>
    <columns>ACCOUNT.CREATED_DATE</columns>
    <filterScope>Mine</filterScope>
    <label>Incomplete KYC</label>
</ListView>